return, revert ws, pom, jsp

--- a/src/main/resources/persistence.properties
+++ b/src/main/resources/persistence.properties
@@ -7,3 +7,5 @@ dataSource2.driverClassName=oracle.jdbc.driver.OracleDriver
 dataSource2.url=jdbc:oracle:thin:@192.168.56.101:1521:orcl
 dataSource2.username=gadata0007
 dataSource2.password=gold
+
+rollbackws.url=http://localhost:8080/core/services/BillRollBack?wsdl
